--- a/src/components/Header/HeaderStyled.css
+++ b/src/components/Header/HeaderStyled.css
@@ -1,22 +1,24 @@
 .Header {
-    width: 100%;
-    height: 400px;
-    position: relative;
-    background-color: antiquewhite;
+  width: 100%;
+  height: 300px;
+  position: relative;
+  background-color: antiquewhite;
 }
 
 .Header_title {
-    text-align: center;
-    color: red;
-    margin-top: 100px;
-    font-size: 20px;
+  text-align: center;
+  color: red;
+  margin: 0;
+  padding-top: 100px;
+  font-size: 20px;
 }
 
 .Header_list {
-    display: flex;
-    justify-content: space-evenly;
-    list-style-type: none;
-    text-transform: uppercase;
-    position: absolute;
-    bottom: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  list-style-type: none;
+  text-transform: uppercase;
+  margin-top: 80px;
+  padding: 0;
+  bottom: 50px;
 }
