--- a/src/components/Main/MainStyled.css
+++ b/src/components/Main/MainStyled.css
@@ -9,13 +9,21 @@
 }
 
 .Main_wraper {
-  position: relative;
+  /* position: relative; */
+  display: flex;
 }
 
 .Filter_block {
-  position: absolute;
+  /* position: absolute; */
   left: 0;
-  width: 50px;
+  /* width: 50px; */
   padding: 10px;
   background-color: cadetblue;
+}
+
+.Block_list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 100%;
 }
