--- a/src/components/Header/HeaderStyled.css
+++ b/src/components/Header/HeaderStyled.css
@@ -2,15 +2,24 @@
   width: 100%;
   height: 300px;
   position: relative;
-  background-color: antiquewhite;
+  background-image: url(./../../img/headerImg.jpg);
+  background-size: cover;
+  background-position: center;
 }
 
 .Header_title {
   text-align: center;
-  color: red;
+  color: white;
   margin: 0;
-  padding-top: 100px;
-  font-size: 20px;
+  padding-top: 60px;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.Header_nav {
+  width: 100%;
+  background: rgba(45, 42, 42, 0.745);
+  /* border-bottom: 2px solid rgba(142, 53, 53, 0.745); */
 }
 
 .Header_list {
@@ -18,7 +27,32 @@
   justify-content: space-evenly;
   list-style-type: none;
   text-transform: uppercase;
-  margin-top: 80px;
-  padding: 0;
+  margin-top: 130px;
+  color: white;
+  padding: 10px;
   bottom: 50px;
+}
+
+.Header_item {
+  text-align: center;
+  padding: 10px;
+  /* font-weight: bold; */
+  font-size: 22px;
+  /* border: 3px solid #1b1c1b14; */
+  /* border-radius: 10px; */
+  /* background: rgba(51, 51, 49, 0.19); */
+}
+
+.Header_item:hover {
+  color: rgba(231, 32, 25, 0.56);
+  cursor: pointer;
+}
+
+.Header_item::before {
+  content: '';
+  height: 28px;
+  width: 3px;
+  margin-left: -10px;
+  position: absolute;
+  background: rgba(241, 68, 5, 0.619);
 }
