--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 body {
   margin: 0;
   padding: 0;
+  background: #30302d;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Roboto';
   -webkit-font-smoothing: antialiased;
@@ -12,4 +13,12 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+img {
+  display: block;
+}
+
+a {
+  text-decoration: none;
 }
